<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EEEEEE"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolBar"
        android:elevation="16dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/PopupTheme" />



    <!--    <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Services"
            android:layout_below="@+id/toolBar"
            android:text="@string/services"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="16dp"/>
-->




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_marginBottom="60dp"
        android:scrollbars="none"
        android:background="#EEEEEE">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:paddingTop="8dp"
            android:background="#EEEEEE">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/firstLinearLayout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0.33">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginEnd="8dp"
                    app:cardElevation="16dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/electricityImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/electricity"
                        android:tint="@color/colorTint"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/electricity"
                        android:textSize="24sp"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="8dp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginStart="8dp"
                    app:cardElevation="16dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/plumberImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/plumber"
                        android:tint="@color/colorTint"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plumbing"
                        android:textSize="24sp"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="8dp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/secondLinearLayout"
                android:background="#EEEEEE"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0.33">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginEnd="8dp"
                    app:cardElevation="16dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/healthImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/health"
                        android:tint="@color/colorTint"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health"
                        android:textSize="24sp"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="8dp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.5"
                    app:cardElevation="16dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/foodImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/food"
                        android:tint="@color/colorTint"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        android:textSize="24sp"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="8dp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/thirdLinearLayout"
                android:background="#EEEEEE"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.33">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginEnd="8dp"
                    app:cardElevation="16dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/deliveryImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/delivery"
                        android:tint="@color/colorTint"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery"
                        android:textSize="24sp"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="8dp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginStart="8dp"
                    app:cardElevation="16dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/carpenterImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/carpenter"
                        android:tint="@color/colorTint"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carpentary"
                        android:textSize="24sp"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="8dp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>




    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/bottomNavigation"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="?android:windowBackground"
        app:itemIconSize="32dp"
        app:menu="@menu/bottom_nav_menu"/>





</RelativeLayout>
